# q

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.on-loop/: index.json
.on-loop/sessions/20260616_201914_kirk-stub-rs-multiproto/: plan.md  state.json
.on-loop/sessions/20260616_201914_kirk-stub-rs-multiproto/agent-notes/: architect.md  build.md  coding.md  documentation.md  reviewer.md  security.md  testing.md
.on-loop/sessions/20260619_185937_rest-user-docs/: state.json
.on-loop/sessions/20260619_185937_rest-user-docs/agent-notes/: documentation.md
.on-loop/sessions/20260620_131449_tiberius-kirk-multimodel-v2/: plan.md  state.json
.on-loop/sessions/20260620_131449_tiberius-kirk-multimodel-v2/agent-notes/: architect.md  build.md  coding.md  documentation.md  reviewer.md  security.md
bench-ts/: README.md  package-lock.json  package.json  tsconfig.json
bench-ts/src/: cli.ts  compare.ts  matrix.ts  results.ts  rng.ts  runner.ts  summary.ts
bench-ts/src/transports/: grpc.ts  rest.ts  tcp.ts  types.ts
docker/: Dockerfile  Dockerfile.bench
docs/: ARCHITECTURE.md  MODELS.md  REST.md  SECURE_BUILD.md
kirk-server/: Cargo.toml  README.md  build.rs
kirk-server/src/: backend.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  model.rs  shutdown.rs
kirk-server/src/backends/: factory.rs  kirk_local.rs  kirk_prod.rs  mod.rs  tiberius.rs
kirk-server/src/grpc/: mod.rs  service.rs
kirk-server/src/rest/: mod.rs  routes.rs  routes_v2.rs  schema.rs  schema_v2.rs
kirk-server/src/tcp/: codec.rs  framing.rs  handler.rs  mod.rs
kirk-server/tests/: cross_transport.rs  grpc_integration.rs  rest_integration.rs  tcp_integration.rs
kirk-stub-kirk/: Cargo.toml
kirk-stub-kirk/src/: kirk.rs  lib.rs
kirk-stub-realistic/: Cargo.toml  README.md
kirk-stub-realistic/src/: density_matrix.rs  eigensolver.rs  entropy.rs  kirk.rs  lib.rs  observables.rs  output.rs  reconstruct.rs  rng.rs  sample.rs  variants.rs
kirk-stub-realistic/tests/: basic.rs  parity.rs
kirk-stub-realistic/tests/fixtures/: handcalc_N2.json  seed42_N16.json  seed42_N32.json  seed42_N8.json
proto/: README.md  kirk.proto
scripts/: check-default-build-clean.sh  dev-setup.sh
