[package]
name = "kirk-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kirk-server"
path = "src/main.rs"

[lib]
name = "kirk_server"
path = "src/lib.rs"

[features]
default = []
# Production Kirk variant. Pulls the private secret-kirk-edge crate from a
# Tailnet-only host. Default builds (CI, Docker) MUST NOT enable this feature.
# See `docs/SECURE_BUILD.md`.
#
# Implementation note: the optional git dep is hidden behind a never-active
# cfg predicate so that default builds (and CI / Docker) do NOT attempt to
# clone the private host. Activating the `secret-kirk-edge` feature is what
# pulls it into the build — at which point the operator's machine must have
# Tailnet access. See SECURE_BUILD.md for the operator workflow.
secret-kirk-edge = []

[dependencies]
kirk-stub-realistic = { path = "../kirk-stub-realistic" }
kirk-stub-kirk = { path = "../kirk-stub-kirk" }
ndarray = "0.16"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
axum = { version = "0.7", features = ["json", "macros"] }
hyper = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"
num_cpus = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
rand = "0.8"
rand_xoshiro = "0.6"
num-complex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tonic-build = "0.12"
