[package]
name = "kirk-stub-kirk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Kirk stub crate: stateful builder over ndarray + Complex64 with shape-correct deterministic public methods."

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
num-complex = "0.4"
num-traits = "0.2"
bon = "3"
getset = "0.1"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
