[package]
name = "kirk-stub-realistic"
version = "0.2.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust port of the kirk-stub-realistic Python package (Hermitian eigh + Boltzmann + Shannon entropy pipeline)."

[lib]
path = "src/lib.rs"

[dependencies]
nalgebra = "0.33"
num-complex = "0.4"
thiserror = "1"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"

[dev-dependencies]
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
